# GroupBookshelfTool

./: LICENSE  README.md
.github/workflows/: build.yml
group-shelf-tool/: LICENSE  README.md  pyproject.toml  requirements.txt
group-shelf-tool/group_shelf_tool/: __init__.py  app.py  app_v2.py  config.ini  dev.ini  run_db_init.py  template.ini  user_setup.py
group-shelf-tool/group_shelf_tool/assets/: dark_plus.qss  goodreads_bookgroups.db  group.qss  init_groups.json  main.qss  saved_groups copy.json  saved_groups.json
group-shelf-tool/group_shelf_tool/components/: converter.py  db_admin.py  db_admin_tab.py  db_init.py  downloader.py  export_tab.py  file_utils.py  groups_admin_tab.py  helper_dialogs.py  history_tab.py  models.py  site_connector.py
