[tool.poetry]
name = "group-shelf-tool"
version = "0.5.0"
description = "Goodreads Group Shelf Tool"
authors = ["Meghan <mm_reads@live.com>"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
selenium = "^4.31.0"
sqlalchemy = "^2.0.40"
pyqt6 = "^6.9.0"
pyside6 = "^6.9.0"
pyqt6-webengine = "^6.9.0"
fake-useragent = "^2.1.0"
bs4 = "^0.0.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
